app/assets/stylesheets/admin/newsroom.css.scss
// Styles related to Newsroom.js functionality

ul.small {
  font-weight: normal;
  font-size: 11px;
  li { 
    line-height: 12px; 
  }
}

.user-badge {
    vertical-align: top;
    @include border-radius(5px);
    position: relative;
    border: 1px solid $grayLight;
    padding: 5px 30px 5px 5px; // make room for the badge
    line-height: 12px;
    
    &.highlighted {
        background-color: #ffff99;
    }
    
    h5 {
      margin: 0;
    }
    
    .headshot {
      max-width: 60px;
      float: left;
    }

    img {
        padding: 5px;
    }
}

.affix .user-badge {
  .headshot, .editing { display: none; }
}

.viewers {
  min-height: 100px;
  &> ul {
    margin-left: 0;
    list-style: none;
    li { 
        margin-bottom: 5px;
        font-weight: bold;
    }
  }
}

